--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -1,11 +1,21 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Angelavasco/coursera--test-/blob/main/fooocus_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR",
-        "outputId": "dc780e5a-5851-4a5f-ea85-d0919bc79448",
+        "outputId": "5fcde923-d7f7-498b-ea52-ee1c91b87361",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -20,7 +30,7 @@
             "Requirement already satisfied: cffi>=1.16.0 in /usr/local/lib/python3.12/dist-packages (from pygit2==1.15.1) (2.0.0)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.12/dist-packages (from cffi>=1.16.0->pygit2==1.15.1) (2.23)\n",
             "Downloading pygit2-1.15.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m22.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/5.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m253.7 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m124.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pygit2\n",
             "  Attempting uninstall: pygit2\n",
             "    Found existing installation: pygit2 1.19.0\n",
@@ -31,8 +41,8 @@
             "Cloning into 'Fooocus'...\n",
             "remote: Enumerating objects: 6735, done.\u001b[K\n",
             "remote: Total 6735 (delta 0), reused 0 (delta 0), pack-reused 6735 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (6735/6735), 33.36 MiB | 23.95 MiB/s, done.\n",
-            "Resolving deltas: 100% (3850/3850), done.\n",
+            "Receiving objects: 100% (6735/6735), 33.35 MiB | 14.37 MiB/s, done.\n",
+            "Resolving deltas: 100% (3849/3849), done.\n",
             "/content/Fooocus\n",
             "Already up-to-date\n",
             "Update succeeded.\n",
@@ -42,7 +52,74 @@
             "Python 3.12.12 (main, Oct 10 2025, 08:52:57) [GCC 11.4.0]\n",
             "Fooocus version: 2.5.5\n",
             "Error checking version for torchsde: No package metadata was found for torchsde\n",
-            "Installing requirements\n"
+            "Installing requirements\n",
+            "[Cleanup] Attempting to delete content of temp dir /tmp/fooocus\n",
+            "[Cleanup] Cleanup successful\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth\" to /content/Fooocus/models/vae_approx/xlvaeapp.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 711kB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/vaeapp_sd15.pt\" to /content/Fooocus/models/vae_approx/vaeapp_sd15.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 686kB/s]\n",
+            "Downloading: \"https://huggingface.co/mashb1t/misc/resolve/main/xl-to-v1_interposer-v4.0.safetensors\" to /content/Fooocus/models/vae_approx/xl-to-v1_interposer-v4.0.safetensors\n",
+            "\n",
+            "100% 5.40M/5.40M [00:00<00:00, 13.6MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_expansion.bin\" to /content/Fooocus/models/prompt_expansion/fooocus_expansion/pytorch_model.bin\n",
+            "\n",
+            "100% 335M/335M [00:02<00:00, 132MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/fav_models/resolve/main/fav/juggernautXL_v8Rundiffusion.safetensors\" to /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
+            "\n",
+            "100% 6.62G/6.62G [00:54<00:00, 131MB/s]\n",
+            "Downloading: \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_offset_example-lora_1.0.safetensors\" to /content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors\n",
+            "\n",
+            "100% 47.3M/47.3M [00:00<00:00, 72.0MB/s]\n",
+            "Total VRAM 15095 MB, total RAM 12976 MB\n",
+            "Set vram state to: HIGH_VRAM\n",
+            "Always offload VRAM\n",
+            "Device: cuda:0 Tesla T4 : native\n",
+            "VAE dtype: torch.float32\n",
+            "Using pytorch cross attention\n",
+            "/content/Fooocus/ldm_patched/unipc/uni_pc.py:56: SyntaxWarning: invalid escape sequence '\\h'\n",
+            "  The `alphas_cumprod` is the \\hat{alpha_n} arrays in the notations of DDPM. Specifically, DDPMs assume that\n",
+            "Refiner unloaded.\n",
+            "Running on local URL:  http://127.0.0.1:7865\n",
+            "IMPORTANT: You are using gradio version 3.41.2, however version 4.44.1 is available, please upgrade.\n",
+            "--------\n",
+            "Running on public URL: https://8b8209c7a66ece19c3.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n",
+            "model_type EPS\n",
+            "UNet ADM Dimension 2816\n",
+            "Using pytorch attention in VAE\n",
+            "Working with z of shape (1, 4, 32, 32) = 4096 dimensions.\n",
+            "Using pytorch attention in VAE\n",
+            "extra {'cond_stage_model.clip_l.text_projection', 'cond_stage_model.clip_l.logit_scale'}\n",
+            "left over keys: dict_keys(['cond_stage_model.clip_l.transformer.text_model.embeddings.position_ids'])\n",
+            "loaded straight to GPU\n",
+            "Requested to load SDXL\n",
+            "Loading 1 new model\n",
+            "Base model loaded: /content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors\n",
+            "VAE loaded: None\n",
+            "Request to load LoRAs [('sd_xl_offset_example-lora_1.0.safetensors', 0.1)] for model [/content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors].\n",
+            "Loaded LoRA [/content/Fooocus/models/loras/sd_xl_offset_example-lora_1.0.safetensors] for UNet [/content/Fooocus/models/checkpoints/juggernautXL_v8Rundiffusion.safetensors] with 788 keys at weight 0.1.\n",
+            "Fooocus V2 Expansion: Vocab with 642 words.\n",
+            "Fooocus Expansion engine loaded for cuda:0, use_fp16 = True.\n",
+            "Requested to load SDXLClipModel\n",
+            "Requested to load GPT2LMHeadModel\n",
+            "Loading 2 new models\n",
+            "[Fooocus Model Management] Moving model(s) has taken 0.61 seconds\n",
+            "2026-01-09 19:11:19.566419: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1767985879.838192    3656 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1767985879.910139    3656 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "W0000 00:00:1767985880.505345    3656 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1767985880.505381    3656 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1767985880.505385    3656 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1767985880.505390    3656 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "2026-01-09 19:11:20.561453: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "Started worker with PID 2802\n",
+            "App started successful. Use the app with http://127.0.0.1:7865/ or 127.0.0.1:7865 or https://8b8209c7a66ece19c3.gradio.live\n"
           ]
         }
       ],
@@ -59,7 +136,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
